--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,5 +19,6 @@
     "tailwindcss": "^3.4.7",
     "postcss": "^8.4.24",
     "autoprefixer": "^10.4.14"
+    "@vitejs/plugin-react": "^4.2.0"
   }
 }
