--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "vite": "^4.5.0",
     "tailwindcss": "^3.4.7",
     "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
     "@vitejs/plugin-react": "^4.2.0"
   }
 }
