--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.2.0",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.245.0",
-    "recharts": "^2.5.0"
+    "recharts": "^2.5.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "vite": "^4.5.0",
